test/data/semantic/bad/binary_op_type_mismatch.coy
fn main() -> () {
    let x = 0.0;

    let y = x + 1;

    ()
}
